We can now view notes and add/remove tags to memory. Need to look at writing them back to zotero